# heart-jepa

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
heart_jepa/: __init__.py
heart_jepa/data/: __init__.py  augmentations.py  dataset.py  preprocessing.py
heart_jepa/losses/: __init__.py  invariance.py  segmentation.py  sigreg.py
heart_jepa/models/: __init__.py  encoder.py  heads.py  heart_jepa.py
heart_jepa/segmentation/: __init__.py  attention_extractor.py  boundary_detector.py  clustering.py  feature_extractor.py  self_supervised_segmenter.py  sound_detector.py  temporal_ordering.py
heart_jepa/utils/: __init__.py  pseudo_labels.py
lejepa/: README.md  pyproject.toml  setup.py
lejepa/figures/: 2d_slicing.py  3d_sobolev.py  README.md  bound_constant.py  matplotlibrc  nonparametric_example.py  teaser_manifold.py
lejepa/scripts/: launch_epps_ablation.md  launch_inet10.py  launch_proj_ablation.md  launch_rtokens_ablation.md  launch_views_ablation.md
lejepa/tests/: standalone.py  test_anderson_darling.py  test_bhep.py  test_cramer_von_mises.py  test_ddp.py  test_epps_pulley.py  test_hz.py  test_jarque_bera.py  test_preference.py  test_shapiro_wilk.py  test_utils.py  test_watson.py
notebooks/: heart_jepa_pipeline.ipynb
scripts/: run_selfsup_segmentation.py  train_finetune.py  train_pretrain.py
tests/: __init__.py  test_models.py  test_preprocessing.py  test_pseudo_labels.py  test_selfsup_segmentation.py
