[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heart_jepa"
version = "0.1.0"
description = "Heart-JEPA: Self-supervised learning for PCG heart sound segmentation and classification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Omar Hassan"},
]
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "neurokit2>=0.2.0",
    "timm>=0.9.0",
    "wfdb>=4.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "lejepa",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
]
train = [
    "wandb>=0.15.0",
    "hydra-core>=1.3.0",
    "pytorch-lightning>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/omar-A-hassan/heart-jepa"
Repository = "https://github.com/omar-A-hassan/heart-jepa"

[tool.hatch.build.targets.wheel]
packages = ["heart_jepa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
